Fix bug for all product images that led to uneven product boxes

--- a/products/static/products/css/products.css
+++ b/products/static/products/css/products.css
@@ -106,6 +106,7 @@ select option[value=""] {
 .product-img {
     width: 100%;
     padding: 30px;
+    max-height: 400px;
 }
 
 .add-cart {
